--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@
 title: Sam Naseem
 email: sam@samnaseem.ai
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Unlocking the Power of AI for Positive Transformation: Welcome to my visionary platform! I am Sam Naseem, and I am passionate about empowering minds with the transformative potential of Artificial Intelligence (AI) for sustainable development. Together, we demystify AI and foster ethical AI leadership to create a future where technology serves humanity's best interests. Join me on this exciting journey of AI education, innovative insights, and collaboration. Together, we will address global challenges, achieve the UN's Sustainable Development Goals (SDGs), and shape a world where AI-empowered innovators thrive. I invite you to explore our diverse content, engage in thought-provoking discussions, and be part of our community shaping tomorrow's AI landscape. Let's pave the way towards a brighter, more inclusive future driven by responsible AI solutions. As we work together, we contribute to a world where AI serves as a force for positive transformation. Together, let's shape a future where innovation and sustainable development go hand in hand.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: samnaseem
